--- a/FRONT_END/package.json
+++ b/FRONT_END/package.json
@@ -2,10 +2,14 @@
   "name": "20182_cnwtt",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000",
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.4",
+    "react-bs-notifier": "^5.0.0",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1"
   },
