--- a/FRONT_END/package.json
+++ b/FRONT_END/package.json
@@ -6,6 +6,7 @@
     "jquery": "^3.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-load-script": "0.0.6",
     "react-redux": "^6.0.1",
     "react-scripts": "2.1.8",
     "redux": "^4.0.1"
