--- a/FRONT_END/package.json
+++ b/FRONT_END/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-string-replace": "^0.4.2",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.1"
   },
   "scripts": {
