--- a/FRONT_END/package.json
+++ b/FRONT_END/package.json
@@ -14,7 +14,8 @@
     "react-scripts": "2.1.8",
     "react-string-replace": "^0.4.2",
     "react-validation": "^3.0.7",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "validator": "^10.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
