--- a/FRONT_END/package.json
+++ b/FRONT_END/package.json
@@ -7,6 +7,7 @@
     "jquery": "^3.3.1",
     "react": "^16.8.4",
     "react-bs-notifier": "^5.0.0",
+    "react-countdown-now": "^2.1.0",
     "react-dom": "^16.8.4",
     "react-load-script": "0.0.6",
     "react-redux": "^6.0.1",
